--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "npm run build && scp -r ./build/* user@158.160.185.102:/home/user/mesto-frontend && ssh user@158.160.185.102 'chmod -R 755 /home/user/mesto-frontend'"
   },
   "eslintConfig": {
     "extends": [
