--- a/backend/package.json
+++ b/backend/package.json
@@ -38,6 +38,7 @@
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.3",
-    "validator": "^13.0.0"
+    "validator": "^13.0.0", 
+    "typescript": "^4.7.4"
   }
 }
