--- a/backend/package.json
+++ b/backend/package.json
@@ -2,7 +2,7 @@
   "name": "web_canonicals_ru",
   "version": "1.0.0",
   "description": "Yandex.Praktikum canonical projects",
- "main": "dist/app.js",
+  "main": "dist/app.js",
   "scripts": {
     "build": "tsc",
     "start": "node dist/app.js",
@@ -30,15 +30,19 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "@sideway/address": "^5.0.0",
+    "@sideway/formula": "^3.0.1",
+    "@sideway/pinpoint": "^2.0.0",
     "bcryptjs": "^2.4.3",
     "celebrate": "^12.1.1",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.18.1",
+    "joi": "^18.0.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.3",
-    "validator": "^13.0.0", 
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "validator": "^13.0.0"
   }
 }
